# TheCuttingRoom

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  clean  cr  demo  docsite  health  init  stop
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
AnalysisEngine/: .env.example  .gitignore  CLAUDE.md  README.md  cli.py  pyproject.toml
AnalysisEngine/engine/: __init__.py  analyze.py  circuit.py  evaluate.py  gemini.py  hub.py  logsetup.py  memory.py  schema.py
AnalysisEngine/memory/: MEMORY.md  patterns.md  rubric.md  system_prompt.base.md
AnalysisEngine/memory/instagram/: notes.md
AnalysisEngine/memory/x/: notes.md
AnalysisEngine/memory/youtube/: notes.md
AnalysisEngine/tests/: conftest.py  fixture_blueprint.py  smoke_hub.py  test_schema.py
AutoSearch/: .env.example  .gitignore  CLAUDE.md  PIPELINE.md  cli.py  pyproject.toml
AutoSearch/engine/: __init__.py  circuit.py  claude.py  gemini.py  hub.py  ig.py  limits.py  logsetup.py  memory.py  plan.py  schema.py  score.py  search.py
AutoSearch/memory/: system_prompt.base.md  trending.md
AutoSearch/memory/instagram/: notes.md
AutoSearch/tests/: conftest.py  smoke_hub.py  test_claude.py  test_discover_events.py  test_expansion_gate.py  test_gemini.py  test_hub_checkout.py  test_plan.py  test_schema.py  test_smoke_hub.py
Dashboard/: .openapi.json  .prettierignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ReelScraper/: .env.example  .gitignore  AGENT_PROMPTS.md  CLAUDE.md  README.md  ROADMAP.md  cli.py  download_media.py  pyproject.toml
ReelScraper/.claude/agents/: ig-analyst.md  x-analyst.md  yt-analyst.md
ReelScraper/api/: app.py
ReelScraper/core/: atomicio.py  audio.py  corpus.py  hubevents.py  logsetup.py  memory.py  runner.py  schema.py  stopflag.py  virality.py
ReelScraper/memory/: README.md
ReelScraper/memory/instagram/: MEMORY.md  patterns.md  persona.md
ReelScraper/memory/shared/: METHOD.md
ReelScraper/memory/x/: MEMORY.md  patterns.md  persona.md
ReelScraper/memory/youtube/: MEMORY.md  patterns.md  persona.md
ReelScraper/studio/: README.md
ReelScraper/tests/: conftest.py  test_cascade.py  test_entry_points.py  test_favicon.py  test_frontend_serving.py  test_hub_identity.py  test_hub_url.py  test_media_events.py  test_media_gate.py  test_pipeline_failure_log.py  test_pipeline_guards.py  test_platform_summary.py  test_propose_stage.py  test_reference_url.py  test_render_launch.py  test_renders.py  test_schedule.py  test_scrape_events.py  test_scrape_resume.py  test_secret_status.py  test_studio_gate.py  test_watchlist_write.py
SimilarContent/: .env.example  CLAUDE.md  cli.py  image_config.json  pyproject.toml  register.py
SimilarContent/engine/: __init__.py  caption.py  circuit.py  hub.py  logsetup.py  nanobanana.py  propose.py  recipe.py  render.py  stitch.py
SimilarContent/tests/: conftest.py  test_ease_lifecycle.py  test_propose.py  test_recipe.py  test_stitch.py
_producer-template/: .env.example  .gitignore  CLAUDE.md  agent.json  logsetup.py  pyproject.toml
_producer-template/memory/: MEMORY.md  patterns.md  persona.md
demo-data/: README.md
docker/: .env.example  Dockerfile  docker-compose.yml  entrypoint.sh
documentation/: mkdocs.yml
niches/: README.md  cricket.yaml  fashion.yaml  football.yaml  travel.yaml
scripts/: README.md  _common.sh  apply-identity.sh  capture-demo.py  check-keys.py  deploy-dashboard.sh  new-niche.sh  (+1 more)
(+121 files in other folders)
