[project]
name = "similar-content"
version = "1.0.0"
description = "SimilarContent — the pipeline's cloning producer: takes a top-performing exemplar (or its schema_version 2 blueprint), reproduces its beats, and renders new short-form frames via a configurable image backend, registering with the hub over HTTP."
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["register", "cli"]
packages = ["engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest>=8.0"]
